--- a/index.html
+++ b/index.html
@@ -1535,12 +1535,16 @@
         }
 
         .footer-logo {
-            font-size: 24px;
-            font-weight: 300;
+            background-image: url(and_pr_logo.png);
+            /* font-size: 24px; */
+            /* font-weight: 300; */
             letter-spacing: 6px;
             color: var(--secondary-color);
             margin-bottom: 20px;
             display: block;
+            padding: 20px;
+            width: 200px;
+            height: 200px;
         }
 
         .social-icons {
@@ -2854,7 +2858,7 @@
                 <div class="footer-content">
                     <!-- About Section -->
                     <div class="footer-section footer-about">
-                        <div class="footer-logo">AND PR AGENCY</div>
+                        <div class="footer-logo"></div>
                         <h3>About Our Agency</h3>
                         <p>
                             AND PR AGENCY is a premier luxury brand consultancy specializing in fashion, lifestyle, and premium brand communications. We create compelling narratives that resonate with sophisticated audiences and drive meaningful engagement across all touchpoints.
