--- a/index.html
+++ b/index.html
@@ -1622,7 +1622,7 @@
         }
 
         .footer-logo {
-            background-image: url(and_pr_logo.png);
+            background-image: url(anpr_image.jpg);
             /* font-size: 24px; */
             /* font-weight: 300; */
             letter-spacing: 6px;
@@ -4116,3 +4116,4 @@
 </body>
 
 </html>
+
