--- a/index.html
+++ b/index.html
@@ -2358,7 +2358,7 @@
         <div class="header-content">
             <div class="header-left">
                 <div class="header-item">
-                    <img id="logoheader" src="and_pr_logo.png" alt="AND PR AGENCY Logo" class="logo-image" />
+                    <img id="logoheader" src="logo_andpr.png" alt="AND PR AGENCY Logo" class="logo-image" />
                 </div>
                 <!-- <div class="header-item">
                     <i class="fas fa-phone"></i>
@@ -4116,4 +4116,5 @@
 </body>
 
 </html>
+
 
