--- a/index.html
+++ b/index.html
@@ -2631,7 +2631,7 @@ h2 {
 
         <div class="slider-container">
             <div class="slide active"
-                style="background-image: url('/placeholder.svg?height=1080&width=1920&text=Creative+Agency+Hero');">
+                style="background-image: url('social-media.jpg');">
                 <div class="slide-overlay"></div>
                 <div class="slide-content">
                     <h2>Welcome to Our Creative Agency</h2>
@@ -2641,7 +2641,7 @@ h2 {
             </div>
 
             <div class="slide"
-                style="background-image: url('/placeholder.svg?height=1080&width=1920&text=Ideas+to+Life');">
+                style="background-image: url('performance.jpg');">
                 <div class="slide-overlay"></div>
                 <div class="slide-content">
                     <h2>We Bring Ideas to Life</h2>
@@ -2651,7 +2651,7 @@ h2 {
             </div>
 
             <div class="slide"
-                style="background-image: url('/placeholder.svg?height=1080&width=1920&text=Design+Develop+Deliver');">
+                style="background-image: url('workers.jpg');">
                 <div class="slide-overlay"></div>
                 <div class="slide-content">
                     <h2>Design. Develop. Deliver.</h2>
@@ -4875,3 +4875,4 @@ mediaAnimation.add("(max-width: 665px)", () => {
 </body>
 
 </html>
+
