--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         /* Header - Transparent */
         .header {
             /* background-color: rgba(255, 255, 255, 0.95); */
-            background-color: rgba(0, 0, 0, 0.4);
+            background-color: rgba(0, 0, 0, 0.6);
             /* backdrop-filter: blur(10px); */
             /* -webkit-backdrop-filter: blur(10px); */
             box-shadow: 0 2px 20px rgba(9, 21, 55, 0.1);
@@ -192,7 +192,7 @@
             display: flex;
             align-items: center;
             gap: 8px;
-            color: var(--text-color);
+            color: white;
             font-size: 16px;
             opacity: 0;
             transform: translateY(20px);
@@ -207,7 +207,7 @@
             font-size: 28px;
             font-weight: 600;
             letter-spacing: 8px;
-            color: var(--primary-color);
+            color: white;
             text-align: center;
             cursor: pointer;
             transition: color 0.3s ease;
@@ -234,7 +234,7 @@
 
         .header-right i {
             font-size: 20px;
-            color: var(--primary-color);
+            color: white;
             cursor: pointer;
             transition: all 0.3s ease;
             opacity: 0;
@@ -249,7 +249,7 @@
         /* Navigation - Transparent */
         .main-nav {
             /* background-color: rgba(9, 21, 55, 0.9); */
-            background-color: rgba(0, 0, 0, 0.4);
+            background-color: rgba(0, 0, 0, 0.6);
             /* backdrop-filter: blur(10px); */
             /* -webkit-backdrop-filter: blur(10px); */
             padding: 0 50px;
@@ -4875,4 +4875,5 @@ mediaAnimation.add("(max-width: 665px)", () => {
 </body>
 
 </html>
+
 
